refactor: rationalise transitive dependencies and fix deprecations